--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
     volumes:
       - ./db:/var/lib/mysql
+
   nginx:
     image: nginx:stable-alpine
     container_name: nginx
@@ -17,16 +18,16 @@ services:
     ports:
       - 80:80
     volumes:
-    - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
 
   flask:
     build: .
     container_name: flask
     restart: always
     environment:
-        - DATABASE_URL=mysql+pymysql://admin:password@dbserver/heroquest
+      - DATABASE_URL=mysql+pymysql://admin:password@dbserver/heroquest
     volumes:
-      - ./app:/app:ro
+      - ./app:/home/heroquest/app:ro
     depends_on:
       - mysql
     links:
