--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# GitHub recommends pinning actions to a commit SHA.
-# To get a newer version, you will need to update the SHA.
-# You can also reference a tag or branch, but the action may change without warning.
-
 name: Publish Docker image
 
 on:
@@ -19,22 +10,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       
       - name: Log in to Docker Hub
-        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }} # Use your Docker Hub Personal Access Token
       
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-        with:
-          images: hoganton/heroquest_assistant
+        run: |
+          echo "::set-output name=tags::latest,${{ github.event.release.tag_name }}"
+          echo "::set-output name=labels::'org.opencontainers.image.title=heroquest_assistant,org.opencontainers.image.description=An assistant for HeroQuest,org.opencontainers.image.url=https://github.com/***/heroquest_assistant,org.opencontainers.image.source=https://github.com/***/heroquest_assistant,org.opencontainers.image.version=,org.opencontainers.image.created=2023-08-30T07:13:23.108Z,org.opencontainers.image.revision=4271e579225c2db31352e0536fae52fb6218bf5e,org.opencontainers.image.licenses=MIT'"
       
       - name: Build and push Docker image
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
