--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
+    runs-on: debian-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -16,19 +16,12 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }} # Use your Docker Hub Personal Access Token
-      
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        run: |
-          echo "::set-output name=tags::latest,${{ github.event.release.tag_name }}"
-          echo "::set-output name=labels::'org.opencontainers.image.title=heroquest_assistant,org.opencontainers.image.description=An assistant for HeroQuest,org.opencontainers.image.url=https://github.com/***/heroquest_assistant,org.opencontainers.image.source=https://github.com/***/heroquest_assistant,org.opencontainers.image.version=,org.opencontainers.image.created=2023-08-30T07:13:23.108Z,org.opencontainers.image.revision=4271e579225c2db31352e0536fae52fb6218bf5e,org.opencontainers.image.licenses=MIT'"
-      
-      - name: Build and push Docker image
+          password: ${{ secrets.DOCKER_TOKEN }}
+          
+      - name: Build and push Docker image with latest tag
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:latest
