--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,9 +3,6 @@ name: Publish Docker image
 on:
   release:
     types: [published]
-  push:
-    branches:
-      - feature/workflow
 
 jobs:
   push_to_registry:
@@ -21,10 +18,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build and push Docker image with latest tag
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ github.repository }}:latest
+      - name: Build Docker image
+        run: docker build -t ${{ github.repository }}:${{ github.sha }} .
+
+      - name: Tag Docker image with release/tag and latest
+        run: |
+          docker tag ${{ github.repository }}:${{ github.sha }} ${{ github.repository }}:${{ github.ref_slug }}
+          docker tag ${{ github.repository }}:${{ github.sha }} ${{ github.repository }}:latest
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ github.repository }}:${{ github.ref_slug }}
+          docker push ${{ github.repository }}:latest
