--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,17 +11,22 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-      
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-          
-      - name: Build and push Docker image with latest tag
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.repository }}:latest
+
+      - name: Build Docker image
+        run: docker build -t ${{ github.repository }}:${{ github.sha }} .
+
+      - name: Tag Docker image with release/tag and latest
+        run: |
+          docker tag ${{ github.repository }}:${{ github.sha }} ${{ github.repository }}:${{ github.ref_slug }}
+          docker tag ${{ github.repository }}:${{ github.sha }} ${{ github.repository }}:latest
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ github.repository }}:${{ github.ref_slug }}
+          docker push ${{ github.repository }}:latest
