--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,12 +21,17 @@ jobs:
       - name: Build Docker image
         run: docker build -t ${{ github.repository }}:${{ github.sha }} .
 
+      - name: Set environment variables
+        run: |
+          echo "::set-env name=IMAGE_NAME::${{ github.repository }}"
+          echo "::set-env name=IMAGE_TAG::${{ github.event.release.tag_name }}"
+
       - name: Tag Docker image with release/tag and latest
         run: |
-          docker tag ${{ github.repository }}:${{ github.sha }} ${{ github.repository }}:${{ github.ref_slug }}
-          docker tag ${{ github.repository }}:${{ github.sha }} ${{ github.repository }}:latest
+          docker tag $IMAGE_NAME:$GITHUB_SHA $IMAGE_NAME:$IMAGE_TAG
+          docker tag $IMAGE_NAME:$GITHUB_SHA $IMAGE_NAME:latest
 
       - name: Push Docker image
         run: |
-          docker push ${{ github.repository }}:${{ github.ref_slug }}
-          docker push ${{ github.repository }}:latest
+          docker push $IMAGE_NAME:$IMAGE_TAG
+          docker push $IMAGE_NAME:latest
