--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - MYSQL_PASSWORD=password
       - MYSQL_USER=admin
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
+      - MYSQL_COLLATION=utf8mb4_bin
     volumes:
       - ./db:/var/lib/mysql
 
@@ -26,6 +27,8 @@ services:
     restart: always
     volumes:
       - ./flask_app/app:/home/heroquest/app:ro
+    environment:
+      - DATABASE_URL=mysql+pymysql://admin:password@dbserver/heroquest?charset=utf8mb4&collation=utf8mb4_bin
     depends_on:
       - mariadb
     links:
