--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - MYSQL_USER=admin
       - MYSQL_RANDOM_ROOT_PASSWORD=yes
       - MYSQL_COLLATION=utf8mb4_bin
+      - TZ=Europe/Zurich
     volumes:
       - ./db:/var/lib/mysql
 
@@ -20,6 +21,8 @@ services:
       - 80:80
     volumes:
       - ./flask_app/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    environment:
+      - TZ=Europe/Zurich
 
   flask:
     image: hoganton/heroquest_assistant:latest
@@ -27,9 +30,7 @@ services:
     restart: always
     volumes:
       - ./flask_app/app:/home/heroquest/app:ro
-    environment:
-      - DATABASE_URL=mysql+pymysql://admin:password@dbserver/heroquest?charset=utf8mb4&collation=utf8mb4_bin
     depends_on:
       - mariadb
-    links:
-      - mariadb:dbserver
+    environment:
+      - TZ=Europe/Zurich
