--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   mariadb:
     image: mariadb:11.1.2
-    container_name: mysql
+    container_name: mariadb
     restart: always
     environment:
       - MYSQL_DATABASE=heroquest
