--- a/.github/workflows/heroquest.yml
+++ b/.github/workflows/heroquest.yml
@@ -53,8 +53,9 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          cat ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan $AZURE_SERVER_HOST >> ~/.ssh/known_hosts
+          ssh-keyscan $AZURE_SERVER_HOST
 
       - name: Connect to Remote Server and Run Command
         run: |
