--- a/.github/workflows/heroquest.yml
+++ b/.github/workflows/heroquest.yml
@@ -55,7 +55,7 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
           cat ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan $AZURE_SERVER_HOST
+          ssh-keyscan 20.203.243.156
 
       - name: Connect to Remote Server and Run Command
         run: |
