--- a/.github/workflows/heroquest.yml
+++ b/.github/workflows/heroquest.yml
@@ -52,11 +52,11 @@ jobs:
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
           cat ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan 20.203.243.156 >> ~/.ssh/known_hosts
+          ssh-keyscan ${{ secrets.AZURE_SERVER_HOST }} >> ~/.ssh/known_hosts
 
       - name: Connect to Remote Server and Run Command
         run: |
-          ssh -i ~/.ssh/id_ed25519 $AZURE_USERNAME@$AZURE_SERVER_HOST "docker compose -f /home/vega/project/heroquest_assistant/docker-compose.yml pull"
+          ssh -i ~/.ssh/id_ed25519 ${{ secrets.AZURE_USERNAME }}@${{ secrets.AZURE_SERVER_HOST }} "docker compose -f /home/vega/project/heroquest_assistant/docker-compose.yml pull"
