--- a/.github/workflows/heroquest.yml
+++ b/.github/workflows/heroquest.yml
@@ -1,50 +1,45 @@
 name: Publish Docker image
 
-# on:
-#   release:
-#     types: [published]
-
-# jobs:
-#   push_to_registry:
-#     name: Push Docker image to Docker Hub
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Check out the repo
-#         uses: actions/checkout@v2
-
-#       - name: Log in to Docker Hub
-#         uses: docker/login-action@v1
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_TOKEN }}
-
-#       - name: Build Docker image
-#         run: docker build -t ${{ github.repository }}:${{ github.sha }} .
-
-#       - name: Set environment variables
-#         run: |
-#           echo "IMAGE_NAME=${{ github.repository }}" >> $GITHUB_ENV
-#           echo "IMAGE_TAG=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
-
-#       - name: Tag Docker image with release/tag and latest
-#         run: |
-#           docker tag $IMAGE_NAME:$GITHUB_SHA $IMAGE_NAME:$IMAGE_TAG
-#           docker tag $IMAGE_NAME:$GITHUB_SHA $IMAGE_NAME:latest
-
-#       - name: Push Docker image
-#         run: |
-#           docker push $IMAGE_NAME:$IMAGE_TAG
-#           docker push $IMAGE_NAME:latest
-
 on:
-  push:
-    branches:
-      - 'feature/*'
+  release:
+    types: [published]
+
 jobs:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build Docker image
+        run: docker build -t ${{ github.repository }}:${{ github.sha }} .
+
+      - name: Set environment variables
+        run: |
+          echo "IMAGE_NAME=${{ github.repository }}" >> $GITHUB_ENV
+          echo "IMAGE_TAG=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+
+      - name: Tag Docker image with release/tag and latest
+        run: |
+          docker tag $IMAGE_NAME:$GITHUB_SHA $IMAGE_NAME:$IMAGE_TAG
+          docker tag $IMAGE_NAME:$GITHUB_SHA $IMAGE_NAME:latest
+
+      - name: Push Docker image
+        run: |
+          docker push $IMAGE_NAME:$IMAGE_TAG
+          docker push $IMAGE_NAME:latest
+
   deploy_on_azure:
     name: Deploy new Image
     runs-on: ubuntu-latest
-    # needs: push_to_registry
+    needs: push_to_registry
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
